# Qwen---llama

./: .gitignore  README.md  dashboard.html  package.json  requirements.txt  schema_diagram.py  server.py  streamlit_app.py
Qwen + llama/: .gitignore  app.py  test_token.example.py
Qwen + llama/db/: connection.py  sql_registry.py
Qwen + llama/llm/: hf_client.py  llama_schema.py  qwen_intent.py
Qwen + llama/utils/: date_parser.py
Qwen_llama/: .env.example  .gitignore  Dockerfile.chatbot  app.py  config.example.py  config.py  docker-compose.chatbot.yml  motia_chat_cli.py  requirements.txt  test_token.example.py
Qwen_llama/charts/: chart_Q-1774092283004-87cd1d.html  chart_Q-1774243085273-8e9615.html  chart_Q-1774243323598-d1aaa9.html  chart_Q-1774243822818-b78a79.html  chart_Q-1774244716682-ad425e.html  chart_Q-1774244824069-0f0ec2.html  (+9 more)
Qwen_llama/motia/: Dockerfile  README.md  docker-compose.yml  iii-config.yaml  patch_motia_runtime.py  pyproject.toml  setup.ps1  start.ps1  supervisord.conf
Qwen_llama/motia/steps/: __init__.py  ambiguity_check_step.py  anomaly_detection_step.py  business_report_generate_step.py  business_report_get_step.py  business_report_run_step.py  business_report_scheduler_step.py  chart_step.py  execute_query_step.py  forecast_step.py  format_result_step.py  generate_insights_step.py  get_result_step.py  get_schema_step.py  ingest_data_step.py  list_queries_step.py  parse_intent_step.py  receive_query_step.py  schema_map_step.py  shared_config.py  suggest_queries_step.py  text_to_sql_step.py
scripts/: seed_duckdb.py
(+19 files in other folders)
